--- a/app/src/main/res/layout/activity_correct_frag.xml
+++ b/app/src/main/res/layout/activity_correct_frag.xml
@@ -1,34 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_second"
+    android:id="@+id/activity_correct_frag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.sailik.sampleapp.SecondActivity">
+    tools:context="com.example.sailik.sampleapp.CorrectFrag">
 
     <TextView
-        android:text="TextView"
+        android:text="That's right!!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+
+        android:id="@+id/wow"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="86dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="199dp"
-        android:id="@+id/textView2" />
-
-    <Button
-        android:text="Ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_marginTop="39dp"
-        android:id="@+id/button2" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
